<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue">

        <TextView
            android:id="@+id/venue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue_name"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/venue_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/venue_name"
            android:text="@string/city"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/venue_image"
            android:layout_width="385dp"
            android:layout_height="330dp"
            android:layout_below="@+id/venue_city"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/venue_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/venue_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/price" />

        <Button
            android:id="@+id/venue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/venue_price"
            android:backgroundTint="@color/pink"
            android:text="@string/visit" />

        <TextView
            android:id="@+id/venue_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>